--- a/scss/pages/_about-us.scss
+++ b/scss/pages/_about-us.scss
@@ -4,6 +4,10 @@
   overflow: hidden;
 }
 
+.media__wrapper{
+  overflow-x: hidden;
+}
+
 .aboutUs__video__container {
   display: flex;
   align-items: flex-start;
